queryapi/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: queryapi
spec: {}
status: {}
