queryapi/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: queryapi
  name: queryapi
  namespace: queryapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queryapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: queryapi
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
