queryapi/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: queryapi
  name: queryapi
  namespace: queryapi
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: queryapi
  type: ClusterIP
status:
  loadBalancer: {}
